--- a/assets/scss/contact.scss
+++ b/assets/scss/contact.scss
@@ -1,9 +1,54 @@
+@import "variables";
 /* contact */
-
-@import 'variables';
 
 .active {
     @extend %active;
 }
 
-@import 'template/style';
+main a {
+    @extend %link;
+}
+
+.tabs {
+    background: $transparent;
+    li {
+        background-color: rgba($color6, 0.05);
+        background-image: url(../images/template/paper.png);
+        background-blend-mode: screen;
+        a {
+            @include box(null, 1%);
+            
+
+            h3 {
+                font-size: 16px;
+                @include box();
+                @extend %link;
+            }
+        }
+    }
+    .tabs-title > a[aria-selected="true"] {
+        background-color: rgba($color6, 0.1);
+    }
+}
+
+.tabs-content {
+    background: $transparent;
+    border: none;
+    .is-active {
+    @include box(null, 1rem 0);
+    }
+    .button {
+        @extend %button;
+    }
+    textarea {
+        resize: none;
+    }
+    legend {
+        color: $color1;
+    }
+}
+
+blockquote,
+cite {
+    color: lightShift($color6);
+}
