--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,8 +1,203 @@
-/* home */
 .active {
   text-shadow: 1px 0 0 black;
 }
 
-/* template styles */
+/* template */
+body {
+  max-width: 1920px;
+  margin: auto;
+  position: relative;
+}
+body::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -999;
+  background-blend-mode: screen;
+  opacity: 0.35;
+  background-color: rgba(225, 202, 111, 0.125);
+  background-image: url(../images/template/body-mobile.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center center;
+}
+@media screen and (min-width: 64em) {
+  body::before {
+    background-image: url(../images/template/body.jpg);
+  }
+}
+
+h1 {
+  font-size: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+h2 {
+  margin: 1rem auto;
+  color: #493e32;
+  font-style: oblique;
+  text-shadow: 0 0 2.5px #2b241d;
+}
+@media screen and (min-width: 40em) {
+  h2 {
+    margin: 50px auto;
+  }
+}
+
+h3,
+h4,
+h5 {
+  color: #493e32;
+}
+
+@media screen and (min-width: 40em) {
+  main > * {
+    margin-bottom: 50px;
+  }
+}
+main i {
+  color: #2b241d;
+}
+
+.top-bar {
+  background-image: url(../images/template/paper.png);
+  background-color: #e1ca6f;
+  background-blend-mode: screen;
+}
+.top-bar .top-bar-right ul {
+  background: transparent;
+}
+.top-bar .top-bar-right ul li a {
+  color: #2b241d;
+  padding: 0.5rem;
+}
+.top-bar .top-bar-right ul li a:hover, .top-bar .top-bar-right ul li a:focus {
+  color: #f8f8ff;
+}
+.top-bar .top-bar-left #logo {
+  background-image: url(../images/template/logo.svg);
+  display: inline-block;
+  height: 100px;
+  width: 235px;
+  background-repeat: no-repeat;
+}
+
+.title-bar {
+  background-image: url(../images/template/paper.png);
+  background-blend-mode: screen;
+  background-color: #e1ca6f;
+}
+.title-bar .title-bar-title,
+.title-bar .menu-icon {
+  color: #f8f8ff;
+}
+
+footer {
+  background-image: url(../images/template/paper.png);
+  background-blend-mode: screen;
+  padding-top: 15px;
+  background-color: #e1ca6f;
+  color: #2b241d;
+  position: relative;
+  z-index: 1;
+}
+footer .menu li a {
+  color: #2b241d;
+  padding: 0.5rem;
+}
+footer .menu li a:hover, footer .menu li a:focus {
+  color: #f8f8ff;
+}
+footer::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+  background-image: url(../images/template/washi.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+/* home */
+@media screen and (min-width: 40em) {
+  #orbit-heading {
+    padding: 0 1rem;
+    margin: 50px auto 1rem auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  #orbit-heading {
+    width: 1200px;
+  }
+}
+
+.orbit {
+  max-width: 1200px;
+  margin: auto;
+}
+.orbit .orbit-container img {
+  max-height: 700px;
+}
+
+@media screen and (min-width: 40em) {
+  .media-object {
+    margin: auto;
+  }
+}
+.media-object .media-object-section:nth-child(2) img {
+  width: 100%;
+  border-radius: 10px;
+}
+.media-object .media-object-section:nth-child(1) {
+  padding: 0;
+}
+@media screen and (min-width: 40em) {
+  .media-object .media-object-section:nth-child(1) {
+    padding: 1rem;
+    margin: 1rem;
+  }
+}
+.media-object .media-object-section:nth-child(2) {
+  padding: 0 2%;
+}
+@media screen and (min-width: 40em) {
+  .media-object .media-object-section:nth-child(2) {
+    padding: 0 0 0 2rem;
+  }
+}
+@media screen and (min-width: 40em) and (min-width: 64em) {
+  .media-object .media-object-section:nth-child(2) {
+    padding: 3%;
+  }
+}
+
+@media screen and (min-width: 40em) {
+  .p-left p,
+.p-right p {
+    padding: 0 1rem 3rem 1rem;
+    margin: 0;
+  }
+}
+@media screen and (min-width: 40em) {
+  .p-left h4,
+.p-right h4 {
+    padding: 2rem 1rem 0 1rem;
+  }
+}
+
+@media screen and (min-width: 40em) {
+  .p-left {
+    box-shadow: 0 -1px rgba(43, 36, 29, 0.1);
+    padding: 2.5rem 0 0 0;
+  }
+}
 
 /*# sourceMappingURL=home.css.map */
