--- a/assets/scss/partials/_breakpoints.scss
+++ b/assets/scss/partials/_breakpoints.scss
@@ -1,4 +1,11 @@
-
 @mixin medium_and_up {
     @media screen and (min-width: 40em) { @content; }
+}
+
+@mixin large_and_up {
+    @media screen and (min-width: 64em) { @content; }
+}
+
+@mixin g_container {
+    @media screen and (min-width: 1200px) { @content; }
 }
