--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: foundation
+Theme Name: Portfolio website
 Theme URI: localhost
 Author: Daniel Costell
 Author URI: portfolio.sunnyhome.site
-Description: Foundation 6 Wordpress theme
+Description: Foundation 6 Wordpress portfolio theme for Jery V
 Version: 1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
