--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,7 +1,7 @@
-.tabs li a h3, main a {
+main .tabs li a h3, main a {
   color: #4E7F3D;
 }
-.tabs li a h3:hover, main a:hover, .tabs li a h3:focus, main a:focus {
+main .tabs li a h3:hover, main a:hover, main .tabs li a h3:focus, main a:focus {
   color: #566CAE;
 }
 
@@ -15,7 +15,7 @@
 }
 
 .active {
-  text-shadow: 1px 0 0 black;
+  text-shadow: 0.25px 0 0 #2b241d;
 }
 
 /* template */
@@ -35,7 +35,7 @@ body::before {
   background-blend-mode: screen;
   opacity: 0.35;
   background-color: rgba(225, 202, 111, 0.125);
-  background-image: url(../images/template/body-mobile.jpg);
+  background-image: url(../../images/template/body-mobile.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -43,7 +43,7 @@ body::before {
 }
 @media screen and (min-width: 64em) {
   body::before {
-    background-image: url(../images/template/body.jpg);
+    background-image: url(../../images/template/body.jpg);
   }
 }
 
@@ -71,6 +71,9 @@ h5 {
   color: #493e32;
 }
 
+main {
+  min-height: 78.92vh;
+}
 @media screen and (min-width: 40em) {
   main > * {
     margin-bottom: 50px;
@@ -81,7 +84,7 @@ main i {
 }
 
 .top-bar {
-  background-image: url(../images/template/paper.png);
+  background-image: url(../../images/template/paper.png);
   background-color: #e1ca6f;
   background-blend-mode: screen;
 }
@@ -95,16 +98,9 @@ main i {
 .top-bar .top-bar-right ul li a:hover, .top-bar .top-bar-right ul li a:focus {
   color: #f8f8ff;
 }
-.top-bar .top-bar-left #logo {
-  background-image: url(../images/template/logo.svg);
-  display: inline-block;
-  height: 100px;
-  width: 235px;
-  background-repeat: no-repeat;
-}
 
 .title-bar {
-  background-image: url(../images/template/paper.png);
+  background-image: url(../../images/template/paper.png);
   background-blend-mode: screen;
   background-color: #e1ca6f;
 }
@@ -114,20 +110,50 @@ main i {
 }
 
 footer {
-  background-image: url(../images/template/paper.png);
+  background-image: url(../../images/template/paper.png);
   background-blend-mode: screen;
   padding-top: 15px;
   background-color: #e1ca6f;
   color: #2b241d;
   position: relative;
-  z-index: 1;
+  z-index: 0;
 }
-footer .menu li a {
+footer li a {
   color: #2b241d;
   padding: 0.5rem;
 }
-footer .menu li a:hover, footer .menu li a:focus {
+footer li a:hover, footer li a:focus {
   color: #f8f8ff;
+}
+footer .widget {
+  margin: 20px auto;
+}
+footer .widget input,
+footer .widget button,
+footer .widget label {
+  color: #2b241d;
+  height: 40px;
+  padding: 5px;
+  margin: 0;
+}
+footer .widget input,
+footer .widget button {
+  cursor: pointer;
+}
+footer .widget button {
+  background-color: rgba(75, 124, 106, 0.5);
+}
+footer .widget button:hover, footer .widget button:focus {
+  background-color: rgba(78, 127, 61, 0.5);
+}
+footer .widget input {
+  background-color: rgba(248, 248, 255, 0.15);
+}
+footer .widget label {
+  display: inline-block;
+}
+footer .widget ul li {
+  list-style-type: none;
 }
 footer::before {
   position: absolute;
@@ -136,30 +162,30 @@ footer::before {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 0;
-  background-image: url(../images/template/washi.png);
+  z-index: -1;
+  background-image: url(../../images/template/washi.png);
   background-position: center center;
   background-repeat: no-repeat;
 }
 
 /* contact */
-.tabs {
+main .tabs {
   background: transparent;
 }
-.tabs li {
+main .tabs li {
   background-color: rgba(138, 138, 138, 0.05);
   background-image: url(../images/template/paper.png);
   background-blend-mode: screen;
 }
-.tabs li a {
+main .tabs li a {
   padding: 1%;
 }
-.tabs li a h3 {
+main .tabs li a h3 {
   font-size: 16px;
   margin: 0;
   padding: 0;
 }
-.tabs .tabs-title > a[aria-selected=true] {
+main .tabs .tabs-title > a[aria-selected=true] {
   background-color: rgba(138, 138, 138, 0.1);
 }
 
