--- a/assets/scss/notfound.scss
+++ b/assets/scss/notfound.scss
@@ -1,3 +1,11 @@
 /* not found */
 
 @import 'variables';
+
+main {
+    @extend %h1;
+    @extend %submit;
+    a {
+        @extend %link;
+    }
+}
