--- a/assets/scss/partials/_placeholders.scss
+++ b/assets/scss/partials/_placeholders.scss
@@ -1,19 +1,49 @@
 %link {
     color: $color5;
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
         color: $color2;
     }
 }
 
 %button {
-    @include box(1rem 0 0 0,null);
+    @include box(1rem 0 0 0, null);
     color: $color1;
-    background-color: rgba($color4,0.5);
-    &:hover, &:focus {
-        background-color: rgba($color5,0.5);
+    background-color: rgba($color4, 0.5);
+    &:hover,
+    &:focus {
+        background-color: rgba($color5, 0.5);
     }
 }
 
 %active {
-    text-shadow: 1px 0 0 black;
+    text-shadow: 0.25px 0 0 $color1;
+}
+
+%h1 {
+    h1 {
+        @include setbox(null, null, null, 1rem auto);
+        color: darkShift($color1);
+        font-style: oblique;
+        text-shadow: 0 0 2.5px $color1;
+        font-size: 1.25rem;
+        @include medium_and_up() {
+            @include setbox(null, null, 0.5%, 40px auto 0 auto);
+            font-size: 2.5rem;
+        }
+    }
+}
+
+%submit {
+    input[type="submit"] {
+        color: $color1;
+        border: none;
+        padding: 0.85em 1em;
+        @include setbox(null, null, null, 0 0 1rem 0);
+        background-color: rgba($color4, 0.5);
+        &:hover,
+        &:focus {
+            background-color: rgba($color5, 0.5);
+        }
+    }
 }
