--- a/assets/scss/template/_footer.scss
+++ b/assets/scss/template/_footer.scss
@@ -1,17 +1,45 @@
 footer {
-    background-image: url(../images/template/paper.png);
+    background-image: url(../../images/template/paper.png);
     background-blend-mode: screen;
     padding-top: 15px;
     background-color: $color3;
     color: $color1;
     position: relative;
-    z-index: 1;
-    .menu li a {
+    z-index: 0;
+     li a {
         color: $color1;
         @include box(null, 0.5rem);
         &:hover,
         &:focus {
             color: $white;
+        }
+    }
+    .widget {
+        margin: 20px auto;
+        input,
+        button,
+        label {
+            color: $color1;
+            @include setbox(null, 40px, 5px, 0);
+        }
+        input,
+        button {
+            cursor: pointer;
+        }
+        button {
+            background-color: rgba($color4,0.5);
+            &:hover, &:focus {
+                background-color: rgba($color5,0.5);
+            }
+        }
+        input {
+            background-color: rgba($white,0.15);
+        }
+        label {
+            display: inline-block;
+        }
+        ul li {
+            list-style-type: none;
         }
     }
     &::before {
@@ -21,8 +49,8 @@ footer {
         right: 0;
         bottom: 0;
         left: 0;
-        z-index: 0;
-        background-image: url(../images/template/washi.png);
+        z-index: -1;
+        background-image: url(../../images/template/washi.png);
         background-position: center center;
         background-repeat: no-repeat;
     }
