--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,5 +1,5 @@
 .active {
-  text-shadow: 1px 0 0 black;
+  text-shadow: 0.25px 0 0 #2b241d;
 }
 
 /* template */
@@ -19,7 +19,7 @@ body::before {
   background-blend-mode: screen;
   opacity: 0.35;
   background-color: rgba(225, 202, 111, 0.125);
-  background-image: url(../images/template/body-mobile.jpg);
+  background-image: url(../../images/template/body-mobile.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -27,7 +27,7 @@ body::before {
 }
 @media screen and (min-width: 64em) {
   body::before {
-    background-image: url(../images/template/body.jpg);
+    background-image: url(../../images/template/body.jpg);
   }
 }
 
@@ -55,6 +55,9 @@ h5 {
   color: #493e32;
 }
 
+main {
+  min-height: 78.92vh;
+}
 @media screen and (min-width: 40em) {
   main > * {
     margin-bottom: 50px;
@@ -65,7 +68,7 @@ main i {
 }
 
 .top-bar {
-  background-image: url(../images/template/paper.png);
+  background-image: url(../../images/template/paper.png);
   background-color: #e1ca6f;
   background-blend-mode: screen;
 }
@@ -79,16 +82,9 @@ main i {
 .top-bar .top-bar-right ul li a:hover, .top-bar .top-bar-right ul li a:focus {
   color: #f8f8ff;
 }
-.top-bar .top-bar-left #logo {
-  background-image: url(../images/template/logo.svg);
-  display: inline-block;
-  height: 100px;
-  width: 235px;
-  background-repeat: no-repeat;
-}
 
 .title-bar {
-  background-image: url(../images/template/paper.png);
+  background-image: url(../../images/template/paper.png);
   background-blend-mode: screen;
   background-color: #e1ca6f;
 }
@@ -98,20 +94,50 @@ main i {
 }
 
 footer {
-  background-image: url(../images/template/paper.png);
+  background-image: url(../../images/template/paper.png);
   background-blend-mode: screen;
   padding-top: 15px;
   background-color: #e1ca6f;
   color: #2b241d;
   position: relative;
-  z-index: 1;
+  z-index: 0;
 }
-footer .menu li a {
+footer li a {
   color: #2b241d;
   padding: 0.5rem;
 }
-footer .menu li a:hover, footer .menu li a:focus {
+footer li a:hover, footer li a:focus {
   color: #f8f8ff;
+}
+footer .widget {
+  margin: 20px auto;
+}
+footer .widget input,
+footer .widget button,
+footer .widget label {
+  color: #2b241d;
+  height: 40px;
+  padding: 5px;
+  margin: 0;
+}
+footer .widget input,
+footer .widget button {
+  cursor: pointer;
+}
+footer .widget button {
+  background-color: rgba(75, 124, 106, 0.5);
+}
+footer .widget button:hover, footer .widget button:focus {
+  background-color: rgba(78, 127, 61, 0.5);
+}
+footer .widget input {
+  background-color: rgba(248, 248, 255, 0.15);
+}
+footer .widget label {
+  display: inline-block;
+}
+footer .widget ul li {
+  list-style-type: none;
 }
 footer::before {
   position: absolute;
@@ -120,8 +146,8 @@ footer::before {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 0;
-  background-image: url(../images/template/washi.png);
+  z-index: -1;
+  background-image: url(../../images/template/washi.png);
   background-position: center center;
   background-repeat: no-repeat;
 }
