--- a/assets/scss/contact.scss
+++ b/assets/scss/contact.scss
@@ -9,7 +9,7 @@ main a {
     @extend %link;
 }
 
-.tabs {
+main .tabs {
     background: $transparent;
     li {
         background-color: rgba($color6, 0.05);
