--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -174,7 +174,7 @@ main .tabs {
 }
 main .tabs li {
   background-color: rgba(138, 138, 138, 0.05);
-  background-image: url(../images/template/paper.png);
+  background-image: url(../../images/template/paper.png);
   background-blend-mode: screen;
 }
 main .tabs li a {
