--- a/assets/scss/contact.scss
+++ b/assets/scss/contact.scss
@@ -13,7 +13,7 @@ main .tabs {
     background: $transparent;
     li {
         background-color: rgba($color6, 0.05);
-        background-image: url(../images/template/paper.png);
+        background-image: url(../../images/template/paper.png);
         background-blend-mode: screen;
         a {
             @include box(null, 1%);
