--- a/assets/scss/template/_header.scss
+++ b/assets/scss/template/_header.scss
@@ -10,6 +10,7 @@
             &:hover,
             &:focus {
                 color: $white;
+                text-shadow: none;
             }
         }
     }
