--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -111,6 +111,7 @@ main i {
 }
 .top-bar .top-bar-right ul li a:hover, .top-bar .top-bar-right ul li a:focus {
   color: #f8f8ff;
+  text-shadow: none;
 }
 
 .title-bar {
