--- a/assets/scss/gallery.scss
+++ b/assets/scss/gallery.scss
@@ -96,7 +96,7 @@
 
 .sticky-ul {
   background-image: url(../../images/gallery/side.png);
-  background-size: contain;
+  background-size: auto;
   background-repeat: no-repeat;
   background-position: top right;
   color: $color1;
