--- a/assets/scss/gallery.scss
+++ b/assets/scss/gallery.scss
@@ -74,6 +74,7 @@
   border: none;
   @include box();
   .tabs-panel.is-active {
+    min-height: 79vh;
     @include box();
     @include medium_and_up {
       position: relative;
