--- a/assets/scss/contact.scss
+++ b/assets/scss/contact.scss
@@ -48,6 +48,34 @@ main .tabs {
     }
 }
 
+#main form {
+    input {
+        background-image: url(../../images/template/paper.png);
+    }
+    textarea {
+    appearance: auto;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    /*  scrollbar color and scrollbar width and overflow-y overlay will not validate */
+    scrollbar-color: rgba($color6, 0.25) $color3;
+    scrollbar-width: thin;
+    /* -webkit-scrollbar will not validate  */
+    &::-webkit-scrollbar {
+        @include setbox(7px, null, null, null);
+    }
+    &::-webkit-scrollbar-thumb {
+        background: $color3;
+    }
+    &::-webkit-scrollbar-track {
+        background: rgba($color6, 0.25);
+    }
+    &::-webkit-scrollbar-thumb:hover,  &::-webkit-scrollbar-thumb:focus {
+        @extend ::-webkit-scrollbar-thumb;
+    }
+}
+}
+
+
 blockquote,
 cite {
     color: lightShift($color6);
