--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -204,7 +204,7 @@ main .tabs .tabs-title > a[aria-selected=true] {
   color: #2b241d;
 }
 
-#main form input {
+#main form input, #main form textarea {
   background-image: url(../../images/template/paper.png);
 }
 #main form textarea {
