--- a/assets/scss/contact.scss
+++ b/assets/scss/contact.scss
@@ -48,7 +48,7 @@ main .tabs {
 }
 
 #main form {
-    input {
+    input, textarea{
         background-image: url(../../images/template/paper.png);
     }
     textarea {
