--- a/assets/scss/contact.scss
+++ b/assets/scss/contact.scss
@@ -19,7 +19,10 @@ main .tabs {
             @include box(null, 1%);
 
             h3 {
-                font-size: 16px;
+                font-size: 14px;
+				@include medium_and_up {
+					font-size: initial;
+				}
                 @include box();
                 @extend %link;
             }
