--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -182,9 +182,14 @@ main .tabs li a {
   padding: 1%;
 }
 main .tabs li a h3 {
-  font-size: 16px;
+  font-size: 14px;
   margin: 0;
   padding: 0;
+}
+@media screen and (min-width: 40em) {
+  main .tabs li a h3 {
+    font-size: initial;
+  }
 }
 main .tabs .tabs-title > a[aria-selected=true] {
   background-color: rgba(138, 138, 138, 0.1);
