--- a/assets/scss/about.scss
+++ b/assets/scss/about.scss
@@ -5,13 +5,55 @@
     @extend %active;
 }
 
-#stick-1 {
+.media-object {
     @include medium_and_up() {
-        @include box(null, 0 1rem 0 0 );
+        @include setbox(null, null, null, auto auto 50px auto);
+        box-shadow: 0 -1px rgba($color1, 0.1), 0 1px rgba($color1, 0.1);
+    }
+    .media-object-section:nth-child(1) img {
+        @include setbox(100%, null, null, null);
+        border-radius: 10px;
+    }
+    .media-object-section {
+        &:nth-child(2) {
+            @include setbox(null, null, 0, null);
+            @include medium_and_up() {
+                @include setbox(null, null, 1rem, 1rem);
+            }
+        }
+        &:nth-child(1) {
+            @include setbox(null, null, 0 2% 1rem 2%, null);
+            @include medium_and_up() {
+                @include setbox(null, null, 0 0 0 2rem, null);
+                @include large_and_up() {
+                    @include setbox(null, null, 3%, null);
+                }
+            }
+        }
     }
 }
 
-#stick-2  {
+.p-left,
+.p-right {
+    p {
+        @include medium_and_up {
+            @include setbox(null, null, 0 1rem 0 1rem, 0);
+        }
+    }
+    h4 {
+        @include medium_and_up {
+            @include setbox(null, null, 2rem 1rem 0 1rem, null);
+        }
+    }
+}
+
+#stick-1 {
+    @include medium_and_up() {
+        @include box(null, 0 1rem 0 0);
+    }
+}
+
+#stick-2 {
     @include medium_and_up() {
         @include box(null, 0 0 0 1rem);
     }
