--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -22,50 +22,123 @@
     }
 }
 
-.media-object {
-    @include medium_and_up() {
-        @include setbox(null, null, null, auto);
+#tabs {
+    @include setbox(null, fit-content, null, null);
+    border-top: 1px solid $white;
+    @include large_and_up {
+      position: absolute;
+      z-index: 999;
     }
-    .media-object-section:nth-child(2) img {
-        @include setbox(100%, null, null, null);
-        border-radius: 10px;
-    }
-    .media-object-section {
-        &:nth-child(1) {
-            @include setbox(null, null, 0, null);
-            @include medium_and_up() {
-                @include setbox(null, null, 1rem, 1rem);
-            }
+    li {
+      a {
+        background-color: lightShift($color3);
+        background-image: url(../../images/template/paper.png);
+        background-blend-mode: screen;
+        outline: none;
+        @include setbox(100%, null, 0.2rem 0.5rem, 0);
+        h3 {
+          @include box();
+          font-size: 16px;
+          @include large_and_up {
+            font-size: 21.5px;
+          }
         }
-        &:nth-child(2) {
-            @include setbox(null, null, 0 2%, null);
-            @include medium_and_up() {
-                @include setbox(null, null, 0 0 0 2rem, null);
-                @include large_and_up() {
-                    @include setbox(null, null, 3%, null);
-                }
-            }
+      }
+      &:nth-child(1) a {
+        @include large_and_up {
+          border-bottom-left-radius: 10px;
         }
-    }
-}
-
-.p-left,
-.p-right {
-    p {
-        @include medium_and_up {
-            @include setbox(null, null, 0 1rem 3rem 1rem, 0);
+      }
+      &:nth-child(6) a {
+        @include large_and_up {
+          border-bottom-right-radius: 10px;
         }
+      }
     }
-    h4 {
-        @include medium_and_up {
-            @include setbox(null, null, 2rem 1rem 0 1rem, null);
+    .tabs-title.is-active a {
+      background-color: $color1;
+      background-image: none;
+      h3 {
+        color: $white;
+      }
+    }
+  }
+  
+  .tabs-content {
+    background-color: $transparent;
+    border: none;
+    @include box();
+    .tabs-panel.is-active {
+      min-height: 79vh;
+      @include box();
+      @include medium_and_up {
+        position: relative;
+        &::before {
+          position: absolute;
+          content: "";
+          top: 0;
+          right: 75%;
+          @include large_and_up {
+            right: 83.34%;
+          }
+          bottom: 0;
+          left: 0;
+          background-image: url(../../images/gallery/side-1.png);
+          border-right: 1px solid $white;
         }
+      }
     }
-}
-
-.p-left {
+  }
+  
+  .sticky-ul {
+    background-image: url(../../images/gallery/side.png);
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: top right;
+    color: $color1;
+    @include setbox(null,221px, 1rem 1rem 0 1rem, null);
+    font-size: 14.5px;
     @include medium_and_up {
-        box-shadow: 0 -1px rgba($color1, 0.1);
-        @include box(null, 2.5rem 0 0 0);
+      position: sticky;
+      top: 0;
     }
-}
+    li {
+      a {
+        @include box();
+        @extend %link;
+      }
+      &.last {
+        font-size: 12.5px;
+        color: darkShift($color6);
+      }
+    }
+    .fi-list {
+      font-size: 11px;
+    }
+  }
+  
+  section {
+    h4 {
+      color: $color1;
+      @include box(1rem 2rem 0 0, null);
+    }
+    .top-link {
+      position: sticky;
+      top: 0;
+      @include box(0 2rem 0 0, null);
+      i {
+        font-size: medium;
+        color: $color4;
+        &:hover,
+        &:focus {
+          color: $color3;
+        }
+      }
+    }
+    .gallery {
+      @include box(null, 2.5rem);
+      @include medium_and_up {
+        @include box(null, 2.5rem 5rem);
+      }
+    }
+  }
